# nb-api

./: .gitignore  Cargo.toml  README.md
.auxiliary/configuration/: AGENTS.md  copier-answers--agents.yaml  mcp-servers.json  pre-commit.yaml
.auxiliary/configuration/coders/codex/: config.toml
.auxiliary/configuration/coders/opencode/: settings.jsonc
.github/workflows/: tester.yaml
documentation/agents/: nbspec.md  notebook.md
documentation/architecture/openspec/specs/nb-api-repository/: spec.md
src/: git.rs  git_env.rs  lib.rs  output.rs  testing.rs
tests/: nb_types.rs
tests/integration/: async_helpers.rs  duplicate_title.rs  edit_mode_required.rs  empty_result_hints.rs  git_env_scrub.rs  git_signing_overrides.rs  main.rs  show_line_wrap.rs  show_probe.rs
tests/integration/common/: mod.rs
