[package]
name = "nb-api"
version = "0.1.3"
edition = "2024"
rust-version = "1.88"
description = "Typed Rust interface to the nb note-taking CLI (subprocess wrapper: escaping, validation, output parsing)"
license = "Apache-2.0"
repository = "https://github.com/emcd/nb-api"
homepage = "https://github.com/emcd/nb-api"
documentation = "https://docs.rs/nb-api"
readme = "README.md"
keywords = ["nb", "notes", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/src/**",
]

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
schemars = ["dep:schemars"]
# Gates the public `nb_api::testing` module (and its `tempfile`
# dependency). Off by default so test-only crates do not enter the
# build graph of normal consumers.
testing = ["dep:tempfile"]
# Gates the async helpers in `nb_api::testing`
# (`configure_tokio`, `nb_command_async`). The crate's own tokio
# usage (in `NbClient`) is unconditional; this flag narrows the
# public API surface for consumers who do not need the async
# testing helpers. Does not add a dependency. Pair with
# `testing` (`--features testing,testing-tokio`) to reach the
# async helpers.
testing-tokio = []

[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["testing"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# JSON Schema generation (optional, for MCP tool schemas)
schemars = { version = "1.0", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Text processing
regex = "1.0"

# Hermetic test fixtures (only compiled when the `testing` feature
# is enabled; never reaches normal consumers).
tempfile = { version = "3.0", optional = true }
